# nl2sql

./: .gitignore  404.html  CONTRIBUTING.md  EVALUATION.md  LICENSE  OPTIMIZATION_ORCHESTRATOR.md  README.md  docker-compose.yaml  index.html  last_reasoning.json  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements-docs.txt  requirements.txt  run.py  sitemap.xml  test_retry.db  users.json  verify_streaming.py
.github/workflows/: publish_docs.yml  publish_pypi.yaml
adapters/: index.html
adapters/architecture/: index.html
adapters/development/: index.html
adapters/mssql/: index.html
adapters/mysql/: index.html
adapters/postgres/: index.html
adapters/sdk/: index.html
adapters/sqlalchemy/: index.html
adapters/sqlite/: index.html
api/: index.html
audit/: architecture_remediation.md  remediation_plan.md  remediation_plan_observability.md
configs/: benchmark_suite.yaml  datasources.demo.yaml  datasources.example.yaml  datasources.schema.json  datasources.template.yaml  datasources.yaml  datasources_test.yaml  llm.demo.yaml  llm.example.yaml  llm.yaml  policies.demo.json  policies.example.json  policies.json  sample_questions.demo.yaml  sample_questions.example.yaml  sample_questions.yaml  secrets.yaml
data/: manufacturing.db
development/: index.html
docs/: ARCHITECTURE_MAP_REDUCE.md  DATA_INDEXING_STRATEGY.md  DETERMINISTIC_SQL.md  EVALUATION.md  PRODUCTION_READINESS.md  architecture.md  database_setup.md  getting-started.md  glossary.md  golden-nl-sql-sqlite.md  index.md  lessons_learned.md  nl2sql-langgraph-plan.md  routing_strategy.md
docs/adr/: index.md  (+7 more)
getting_started/: index.html
glossary/: index.html
scripts/: run_graph_cli.py  run_nl_sql_validation.py  seed_databases.py  setup_sqlite_manufacturing.py  test_integration.ps1
search/: search_index.json
src/: capabilities.py  cli.py  datasource_config.py  demo_run.py  engine_factory.py  langgraph_pipeline.py  langgraph_skeleton.py  llm_registry.py  nodes.py  schemas.py
tests/: conftest.py  golden_dataset.yaml  golden_sqlite_runner.py  nl_to_sql_validation.py  temp_config_v2_test.py  test_goldens_sqlite.py  test_goldens_sqlite_expanded.py  test_validator.py
(+336 files in other folders)
