[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nl2sql-monorepo"
version = "0.1.0"
description = "Monorepo for NL2SQL Agent"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  # Core dependencies are in packages/core
]

[tool.pytest.ini_options]
testpaths = ["packages/core/tests", "packages/adapter-sdk/tests", "packages/adapters/postgres/tests"]
pythonpath = ["packages/core/src", "packages/adapter-sdk/src", "packages/adapters/postgres/src"]
